completed add student to course
